--- a/timetable/index.html
+++ b/timetable/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>d3.js with OSM leaflet.js rendering the GB timetable</title>
-        <link rel="stylesheet" href="https://npmcdn.com/leaflet@1.0.3/dist/leaflet.css">
+        <title>d3.js with OSM leaflet.js rendering of train movements by timing-points (TIPLOCs)</title>
+        <link rel="stylesheet" href="https://npmcdn.com/leaflet@1.3.1/dist/leaflet.css">
         <script src="https://npmcdn.com/leaflet@1.3.1/dist/leaflet.js"></script>
         <script src="http://d3js.org/d3.v5.min.js"></script>
     </head>
@@ -91,7 +91,6 @@
                  else
                      count[event] = 1;
              }
-  
              return Object.entries(count);
          };
 
